--- a/yxyl.plist
+++ b/yxyl.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://23.224.180.154/ipa/yxyl.ipa</string>
+                    <string>https://raw.githubusercontent.com/cruiseyideng/store/master/yxyl.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
